dnl
dnl	Copyright (c) 2007-2012 Plecno s.r.l. All Rights Reserved 
dnl	info@plecno.com
dnl	via Giovio 8, 20144 Milano, Italy
dnl
dnl	Released under the terms of the GPLv3 or later
dnl
dnl	Author: Oreste Notelli <oreste.notelli@plecno.com>	
dnl

AC_PREREQ(2.68)
AC_COPYRIGHT(2007-2012 (c) Plecno s.r.l)
AC_INIT(justniffer, [0.9.0], info@plecno.com)
AC_DEFINE(JUSTNIFFER_VERSION, ["0.9.0"], [justniffer version])
LT_INIT([dlopen])
AM_INIT_AUTOMAKE
AC_DEFINE([HAVE_LIB_PCAP], [], [has not libcap])
AM_CONFIG_HEADER(include/config.h)


AM_INIT_AUTOMAKE([-Wall -Werror])

if test "$CXXFLAGS" = ""; then
CXXFLAGS="-Os -Wall"
fi

LIBNIDS="libnids-1.21_patched"
NIDS2_INCLUDE="-I ../lib/$LIBNIDS/src"
NIDS2_LIB="-L../lib/$LIBNIDS/src -lnids2"
PCAP_LIB="-lpcap"
AC_SUBST(NIDS2_INCLUDE)
AC_SUBST(NIDS2_LIB)
AC_SUBST(PCAP_LIB)

AC_CHECK_PROG(BASH_F, bash, "yes") 
echo "BASH_F= $BASH_F"
if test "$BASH_F" != "yes";
then
  AC_MSG_ERROR(["cannot find bash shell, download and build it: see www.gnu.org/software/bash/"])
fi

AC_PROG_CXX (gcc)
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_CHECK_HEADERS([sys/time.h])
AC_C_CONST
AC_C_INLINE
AC_FUNC_STRFTIME
AC_HEADER_STDBOOL
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_HEADER(netinet/ip.h, , 
  AC_MSG_ERROR(["cannot find netinet/ip.h"]))
  
AC_CHECK_LIB(pcap, pcap_open_live, AC_DEFINE(HAVE_LIB_PCAP))


AX_BOOST_BASE
if test "$succeeded" != "yes";
then
    AC_MSG_ERROR(["cannot find the boost libraries: see http://www.boost.org/"])
fi

AX_BOOST_REGEX
if test "$ax_cv_boost_regex" != "yes";
then
    AC_MSG_ERROR(["cannot find the boost regex libraries: see http://www.boost.org/"])
fi

AC_PYTHON_DEVEL
AX_BOOST_PYTHON
AM_CONDITIONAL(HAVE_PYTHON_MODULES, [test "$ac_cv_boost_python" == "yes"])

AX_BOOST_PROGRAM_OPTIONS
if test "$ax_cv_boost_program_options" != "yes";
then
    AC_MSG_ERROR(["cannot find the boost program_options libraries: see http://www.boost.org/"])
fi

AX_BOOST_IOSTREAMS
if test "$ax_cv_boost_iostreams" != "yes";
then
    AC_MSG_ERROR(["cannot find the boost iostreams libraries: see http://www.boost.org/"])
fi

AC_CHECK_FILE(lib/$LIBNIDS/README.original, ,
[ AC_CHECK_PROG(PATCH, patch, yes, no) 
  if test "$PATCH" != yes;
  then
    AC_MSG_ERROR(["cannot find patch, download and build it: see http://www.gnu.org/software/patch/"])
  fi
  TAR_FOUND=""
  AC_CHECK_PROG(TAR, tar, yes) 
  if test "$TAR" != yes;
  then
    AC_MSG_ERROR(["cannot find tar"])
  fi
  AC_CHECK_FILE(lib/$LIBNIDS/src/nids2.h, , AC_MSG_ERROR(["cannot find patched libnids"]))
  ]
)

AC_CONFIG_SUBDIRS([lib/libnids-1.21_patched])
	
PYTHONCODEDIR=${datarootdir}/justniffer/scripts
AC_SUBST(PYTHONCODEDIR)
if test "$ax_python_bin" != "no"; then
  PYTHONSUBDIR="python"
fi

AC_SUBST(PYTHONSUBDIR)
AC_SUBST(HAVE_PYTHON_MODULES)

	
AC_OUTPUT(Makefile src/Makefile python/Makefile )
