AM_CPPFLAGS= $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CFLAGS) -I ../include
LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_PYTHON_LDFLAGS) $(BOOST_REGEX_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_PYTHON_LIBS)  $(PYTHON_LDFLAGS) 
bin_PROGRAMS = justniffer

justniffer_SOURCES =  main.cpp formatter.cpp utilities.cpp regex.cpp