[tool.poetry]
name = "justniffer-cli"
version = "0.2.2"
description = "A Python-based command-line interface (CLI) for interacting with [justniffer] (https://github.com/onotelli/justniffer)."
authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
readme = "README.md"
packages = [{include = "justniffer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
loguru = "^0.7.3"
scapy = "^2.6.1"
httptools = "^0.6.4"
dynaconf = "^3.2.11"
pydantic = "^2.11.4"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pudb = "^2025.1"
ipython = "8.36.0"
psutil = "^7.0.0"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
justniffer-cli = "justniffer.cli:main"

