[tool.poetry]
name = "justniffer"
version = "0.1.0"
description = ""
authors = ["Oreste Notelli <oreste.notelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
pudb = "^2024.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
justniffer-cli = "justniffer.cli:main"