[tool.poetry]
name = "justniffer"
version = "0.1.1"
description = ""
authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
loguru = "^0.7.3"
scapy = "^2.6.1"
httptools = "^0.6.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
pudb = "^2024.1.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
justniffer-cli = "justniffer.cli:main"