[tool.poetry]
name = "justniffer"
version = "0.2.0a0"
description = ""
authors = ["Oreste Notelli <oreste.notelli@plecno.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
loguru = "^0.7.3"
scapy = "^2.6.1"
httptools = "^0.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pudb = "^2025.1"
ipython = "8.36.0"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
justniffer-cli = "justniffer.cli:main"